[package]
name = "nom-psl"
version = "1.0.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
description = "Fast public suffix list domain parsing, written in nom"
license = "BSD-3-Clause"
license_file = "LICENSE"
repository = "https://github.com/dwerner/nom-psl"
homepage = "https://github.com/dwerner/nom-psl"

[dependencies]
nom = "4"
idna = "0.1"
log = "0.4"

[dev-dependencies]
lazy_static = "1"
